table text align fixed

--- a/src/resources/sass/pages/konto-new/_spelkonto.scss
+++ b/src/resources/sass/pages/konto-new/_spelkonto.scss
@@ -10,7 +10,9 @@
         background-color: #D96195;
     }
 }
-
+.w-25{
+  width: 25%;
+}
 .block-promotion {
     &__wrapper{
         @media screen and (min-width: 768px) {
